--- a/Demos/ui.light.selectionList.html
+++ b/Demos/ui.light.selectionList.html
@@ -21,7 +21,7 @@
     </style>
 
 
-    <script type="text/javascript" src="../Scripts/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="../Scripts/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="../Scripts/UI/ui.core.js"></script>
 
     <script type="text/javascript" src="../Scripts/Page/ui.masterpage.js"></script>
