--- a/Demos/Effects/layout_2.html
+++ b/Demos/Effects/layout_2.html
@@ -27,6 +27,11 @@
             color: #333;
         }
 
+        body, ol, ul, li, dl, dt, dd, form, fieldset, pr, pc {
+            margin: 0;
+            padding: 0;
+        }
+
         section, header, footer, address, article, aside, nav, menu {
             display: block;
             margin: 0;
@@ -38,7 +43,35 @@
             padding: 0;
             list-style: none;
         }
+
+        /* 清除浮动，在浮动元素的父级容器上使用 */
+        .clear {
+            zoom: 1;
+        }
+
+            .clear:after {
+                content:"";
+                display:block;
+                height:0;
+                line-height:0;
+                clear:both;
+                visibility:hidden;
+            }
+
+        /* 默认超链接 */
+        a {
+            text-decoration: none;
+        }
+
+            a:hover {
+                text-decoration: underline;
+            }
+
+            a:active {
+                background-color: transparent;
+            }
         
+        /* 主结构 */
         #wrap {
             width: 100%;
             height: auto;
@@ -93,6 +126,8 @@
             height:auto;
         }
 
+        /* 头部 */
+
         .head-background {
             position: absolute;
             width: 100%;
@@ -138,23 +173,118 @@
             margin: 0;
         }
 
+        /* 默认风格的汉堡菜单 */
+        .normal-hamburg {
+            position: absolute;
+            display: inline-block;
+            vertical-align: top;
+            width: 48px;
+            height: 48px;
+            cursor: pointer;
+            top: 8px;
+            right: 8px;
+            display: none;
+        }
+
+        .normal-hamburg .menu-inner-line {
+            background-color: #333;
+            width: 24px;
+            height: 2px;
+            display: block;
+            position: absolute;
+            left: 12px;
+        }
+
+        .normal-hamburg b.a {
+            top: 17px;
+            -webkit-transform: translate3d(0, 0, 0) rotate(0deg);
+            -webkit-transition: -webkit-transform .4s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -o-transform: translate3d(0, 0, 0) rotate(0deg);
+            -o-transition: -o-transform .4s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -ms-transform: translate3d(0, 0, 0) rotate(0deg);
+            -ms-transition: -ms-transform .4s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -moz-transform: translate3d(0, 0, 0) rotate(0deg);
+            -moz-transition: -moz-transform .4s cubic-bezier(0.645, 0.045, 0.355, 1);
+            transform: translate3d(0, 0, 0) rotate(0deg);
+            transition: transform .4s cubic-bezier(0.645, 0.045, 0.355, 1);
+        }
+
+        .normal-hamburg b.b {
+            top: 23px;
+            opacity: 1;
+            -webkit-transform: translate3d(0, 0, 0) rotate(0deg);
+            -webkit-transition: -webkit-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1), opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) .2s;
+            -o-transform: translate3d(0, 0, 0) rotate(0deg);
+            -o-transition: -o-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1), opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) .2s;
+            -ms-transform: translate3d(0, 0, 0) rotate(0deg);
+            -ms-transition: -ms-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1), opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) .2s;
+            -moz-transform: translate3d(0, 0, 0) rotate(0deg);
+            -moz-transition: -moz-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1), opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) .2s;
+            transform: translate3d(0, 0, 0) rotate(0deg);
+            transition: transform .35s cubic-bezier(0.645, 0.045, 0.355, 1), opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) .2s;
+        }
+
+        .normal-hamburg b.c {
+            bottom: 17px;
+            -webkit-transform: translate3d(0, 0, 0) rotate(0deg);
+            -webkit-transition: -webkit-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -o-transform: translate3d(0, 0, 0) rotate(0deg);
+            -o-transition: -o-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -ms-transform: translate3d(0, 0, 0) rotate(0deg);
+            -ms-transition: -ms-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -moz-transform: translate3d(0, 0, 0) rotate(0deg);
+            -moz-transition: -moz-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1);
+            transform: translate3d(0, 0, 0) rotate(0deg);
+            transition: transform .35s cubic-bezier(0.645, 0.045, 0.355, 1);
+        }
+
+        .normal-hamburg-close b.a {
+            -webkit-transform: translate3d(0, 8px, 0) rotate(45deg);
+            -webkit-transition: -webkit-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            -o-transform: translate3d(0, 6px, 0) rotate(45deg);
+            -o-transition: -o-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            -ms-transform: translate3d(0, 6px, 0) rotate(45deg);
+            -ms-transition: -ms-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            -moz-transform: translate3d(0, 6px, 0) rotate(45deg);
+            -moz-transition: -moz-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            transform: translate3d(0, 6px, 0) rotate(45deg);
+            transition: transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+        }
+
+        .normal-hamburg-close b.b {
+            opacity: 0;
+            -webkit-transform: translate3d(4px, 0, 0) rotate(-180deg);
+            -webkit-transition: -webkit-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms, opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            -o-transform: translate3d(4px, 0, 0) rotate(-180deg);
+            -o-transition: -o-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms, opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            -ms-transform: translate3d(4px, 0, 0) rotate(-180deg);
+            -ms-transition: -ms-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms, opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            -moz-transform: translate3d(4px, 0, 0) rotate(-180deg);
+            -moz-transition: -moz-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms, opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            transform: translate3d(4px, 0, 0) rotate(-180deg);
+            transition: transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms, opacity .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+        }
+
+        .normal-hamburg-close b.c {
+            -webkit-transform: translate3d(0, -6px, 0) rotate(-45deg);
+            -webkit-transition: -webkit-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            -o-transform: translate3d(0, -6px, 0) rotate(-45deg);
+            -o-transition: -o-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            -ms-transform: translate3d(0, -6px, 0) rotate(-45deg);
+            -ms-transition: -ms-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            -moz-transform: translate3d(0, -6px, 0) rotate(-45deg);
+            -moz-transition: -moz-transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+            transform: translate3d(0, -6px, 0) rotate(-45deg);
+            transition: transform .35s cubic-bezier(0.645, 0.045, 0.355, 1) 50ms;
+        }
+
         .navigation-list {
             position: absolute;
             left: 200px;
             right: 0;
             top: 0;
             height: 100%;
-            zoom: 1;
         }
-
-            .navigation-list:after {
-                content:"";
-                display:block;
-                height:0;
-                line-height:0;
-                clear:both;
-                visibility:hidden;
-            }
 
         .navigation-item {
             height: 100%;
@@ -249,7 +379,7 @@
             margin-left: 2%;
         }
 
-
+        /* 相应显示面积 */
         @media screen and (min-width:1200px) {
         }
 
@@ -311,7 +441,7 @@
                     <div class="logo">
                         <i class="logo-icon"></i><h3 class="logo-title">云之国</h3>
                     </div>
-                    <ul class="navigation-list">
+                    <ul class="navigation-list clear">
                         <li class="navigation-item">
                             <a href="javascript:void(0)">首页</a>
                         </li>
@@ -331,6 +461,11 @@
                             <a href="javascript:void(0)">联系我们</a>
                         </li>
                     </ul>
+                    <a class="normal-hamburg" href="javascript:void(0)">
+                        <b class="menu-inner-line a"></b>
+                        <b class="menu-inner-line b"></b>
+                        <b class="menu-inner-line c"></b>
+                    </a>
                 </div>
             </div>
         </section>
