--- a/Demos/Effects/layout_2.html
+++ b/Demos/Effects/layout_2.html
@@ -328,7 +328,8 @@
             overflow: hidden;
             width: 100%;
             height: auto;
-            padding-top: 6%;
+            padding-top: 5%;
+            padding-bottom: 5%;
         }
 
         .item-list:before,
@@ -346,9 +347,9 @@
         }
 
         .block-item {
-            width: 41%;
-            margin-bottom: 6%;
-            margin-right: 6%;
+            width: 45%;
+            margin-bottom: 0;
+            margin-right: 0;
             position: relative;
             float: left;
         }
@@ -356,29 +357,30 @@
             .block-item:before {
                 content: "";
                 display: inline-block;
-                padding-bottom: 100%;
+                padding-bottom: 66%;
                 width: .1px;
                 vertical-align: middle;
             }
 
         .block-item-1st {
-            margin-left: 6%;
+            margin-left: 5%;
         }
 
         .item-container {
             position: absolute;
             display: block;
-            border: none !implement;
+            border: none !important;
             width: 100%;
             top: 0;
             bottom: 0;
             left: 0;
             overflow: hidden;
+            text-decoration: none !important;
         }
 
         .block-picture {
             width: 100%;
-            height: 70%;
+            height: 100%;
             overflow: hidden;
         }
 
@@ -386,6 +388,7 @@
             width: 100%;
             height: 100%;
             background-color: #aaa;
+            border: none 0;
         }
 
         .item-container:hover img {
@@ -400,8 +403,9 @@
         }
 
         .block-text {
+            display: none;
             width: 100%;
-            height: 30%;
+            height: 40%;
         }
 
         .block-heading {
@@ -510,13 +514,9 @@
                 background-color: rgba(255,255,255,.7);
             }
 
-            .item-list {
-                padding-top: 0;
-            }
-
             .block-item { 
                 width: 90%;
-                margin: 5%;
+                margin-left: 5%;
             }
 
             .block-item-1st {
@@ -525,7 +525,6 @@
 
             .demo-item {
                 width: 90%;
-                margin: 5%;
             }
 
             .demo-item-1st {
@@ -603,7 +602,7 @@
                         <li class="baner-item"></li>
                     </ul>
                 </div>
-                <div class="content" style="background-color:#dcdcdc;max-height:none;">
+                <div class="content" style="max-height:none;">
                     <ul class="item-list">
                         <li class="block-item block-item-1st">
                             <a class="item-container" href="javascript:void(0)">
@@ -612,29 +611,29 @@
                                 </div>
                                 <div class="block-text">
                                     <h3 class="block-heading">大型信息系统</h3>
-                                    <span class="block-description">描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息</span>
+                                    <span class="block-description"></span>
                                 </div>
                             </a>
                         </li>
                         <li class="block-item">
                             <a class="item-container" href="javascript:void(0)">
                                 <div class="block-picture">
-                                    <img />
+                                    <img style="background-color: #ccc;"/>
                                 </div>
                                 <div class="block-text">
                                     <h3 class="block-heading">大型三维GIS系统</h3>
-                                    <span class="block-description">描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息</span>
+                                    <span class="block-description"></span>
                                 </div>
                             </a>
                         </li>
                         <li class="block-item block-item-1st">
                             <a class="item-container" href="javascript:void(0)">
                                 <div class="block-picture">
-                                    <img />
+                                    <img style="background-color: #ccc;" />
                                 </div>
                                 <div class="block-text">
                                     <h3 class="block-heading">移动互联网</h3>
-                                    <span class="block-description">描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息</span>
+                                    <span class="block-description"></span>
                                 </div>
                             </a>
                         </li>
@@ -649,6 +648,28 @@
                                 </div>
                             </a>
                         </li>
+                        <li class="block-item block-item-1st">
+                            <a class="item-container" href="javascript:void(0)">
+                                <div class="block-picture">
+                                    <img />
+                                </div>
+                                <div class="block-text">
+                                    <h3 class="block-heading">大型信息系统</h3>
+                                    <span class="block-description"></span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="block-item">
+                            <a class="item-container" href="javascript:void(0)">
+                                <div class="block-picture">
+                                    <img style="background-color: #ccc;"/>
+                                </div>
+                                <div class="block-text">
+                                    <h3 class="block-heading">大型三维GIS系统</h3>
+                                    <span class="block-description"></span>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="content" style="background-color:#f1f1f1">
@@ -657,7 +678,7 @@
                         <li class="baner-item"></li>
                     </ul>
                 </div>
-                <div class="content" style="background-color:#dcdcdc">
+                <div class="content">
                     <ul class="item-list demo-list">
                         <li class="demo-item demo-item-1st"></li>
                         <li class="demo-item"></li>
