--- a/Demos/Effects/layout-flex.html
+++ b/Demos/Effects/layout-flex.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -56,7 +55,6 @@
             flex-direction: row;
             width: 100%;
             flex: 1 1 auto;
-            overflow: auto;
         }
 
         #foot {
@@ -103,6 +101,7 @@
         .body-content {
             flex: 1 1 auto;
             display: flex;
+            overflow: hidden;
             flex-direction: column;
         }
 
