--- a/Demos/Effects/layout-flex.html
+++ b/Demos/Effects/layout-flex.html
@@ -3,6 +3,66 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <!-- 
+        FLEX布局分为FLEX容器和FLEX元素
+        
+        FLEX容器默认存在两根轴：水平的主轴（main axis）和垂直的交叉轴（cross axis）。
+        主轴的开始位置（与边框的交叉点）叫做main start，结束位置叫做main end；交叉轴的开始位置叫做cross start，结束位置叫做cross end。
+        项目默认沿主轴排列。单个项目占据的主轴空间叫做main size，占据的交叉轴空间叫做cross size。
+
+        FLEX容器样式 display: flex
+        flex-direction: row | row-reverse | column | column-reverse;
+            设置主轴方向
+            row(默认值): 横向，从左到右; 
+            row-reverse: 横向，从右到左; 
+            column: 纵向，从上到下; 
+            column-reverse: 纵向，从下到上
+        flex-wrap: nowrap | wrap | wrap-reverse;
+            排不下，如何换行
+            nowrap(默认): 不换行
+            wrap: 向下换行
+            wrap-reverse: 向上换行
+        flex-flow: <flex-direction> || <flex-wrap>;
+            flex-direction属性和flex-wrap属性的简写形式，默认值为row nowrap。
+        justify-content: flex-start | flex-end | center | space-between | space-around;
+            主轴上的对齐方式，相当于text-align
+            flex-start(默认值): 左对齐
+            flex-end: 右对齐
+            center: 居中
+            space-between: 两端对齐，项目之间的间隔都相等
+            space-around: 每个项目两侧的间隔相等。所以，项目之间的间隔比项目与边框的间隔大一倍
+        align-items: flex-start | flex-end | center | baseline | stretch;
+            交叉轴上对齐方式，也就是vertical-align
+            flex-start: 交叉轴的起点对齐
+            flex-end: 交叉轴的终点对齐
+            center: 交叉轴的中点对齐
+            baseline: 项目的第一行文字的基线对齐
+            stretch(默认值): 如果项目未设置高度或设为auto，将占满整个容器的高度。 
+        align-items: flex-start | flex-end | center | baseline | stretch;
+            多根轴线的对齐方式。如果项目只有一根轴线，该属性不起作用
+            flex-start：与交叉轴的起点对齐。
+            flex-end：与交叉轴的终点对齐。
+            center：与交叉轴的中点对齐。
+            space-between：与交叉轴两端对齐，轴线之间的间隔平均分布。
+            space-around：每根轴线两侧的间隔都相等。所以，轴线之间的间隔比轴线与边框的间隔大一倍。
+            stretch（默认值）：轴线占满整个交叉轴。
+
+        FLEX元素样式
+        order: <integer>;
+            定义项目的排列顺序。数值越小，排列越靠前，默认为0。
+        flex-grow: <number>; /* default 0 */
+            定义项目的放大比例，默认为0，即如果存在剩余空间，也不放大。
+        flex-shrink: <number>; /* default 1 */
+            定义了项目的缩小比例，默认为1，即如果空间不足，该项目将缩小。
+        flex-basis: <length> | auto; /* default auto */
+            定义了在分配多余空间之前，项目占据的主轴空间（main size）。浏览器根据这个属性，计算主轴是否有多余空间。它的默认值为auto，即项目的本来大小。
+        flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]
+            flex-grow, flex-shrink 和 flex-basis的简写，默认值为0 1 auto。后两个属性可选。
+            该属性有两个快捷值：auto (1 1 auto) 和 none (0 0 auto)。
+            建议优先使用这个属性，而不是单独写三个分离的属性，因为浏览器会推算相关值
+        align-self: auto | flex-start | flex-end | center | baseline | stretch;
+            允许单个项目有与其他项目不一样的对齐方式，可覆盖align-items属性。默认值为auto，表示继承父元素的align-items属性，如果没有父元素，则等同于stretch。
+    -->
 
     <title>弹性布局</title>
     <style type="text/css">
