--- a/Demos/Effects/layout-flex.html
+++ b/Demos/Effects/layout-flex.html
@@ -31,7 +31,7 @@
             center: 居中
             space-between: 两端对齐，项目之间的间隔都相等
             space-around: 每个项目两侧的间隔相等。所以，项目之间的间隔比项目与边框的间隔大一倍
-        align-items: flex-start | flex-end | center | baseline | stretch;
+        align-content: flex-start | flex-end | center | baseline | stretch;
             交叉轴上对齐方式，也就是vertical-align
             flex-start: 交叉轴的起点对齐
             flex-end: 交叉轴的终点对齐
